# Blinky

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  readme.md
cmake/: Testing.cmake
scripts/vscode/: launch.json  settings.json
sources/: CMakeLists.txt  main.c
sources/add/fakes/: add_fake.c
sources/add/include/add/: add.h
sources/add/sources/: add.c
sources/add/tests/: CMakeLists.txt  add_ut.cpp
sources/inc/include/inc/: inc.h
sources/inc/sources/: inc.c
sources/inc/tests/: CMakeLists.txt  inc_ut.cpp
tests/: example.cpp
